# guardian-crossword-supernote

./: .env.template  .gitignore  CLAUDE.md  CROSSWORD.md  README.md  config.py  file_manager.py  guardian_downloader.py  main.py  pyproject.toml  requirements.txt  supernote_client.py
scripts/: guardian-crossword
src/guardian_crossword/: __init__.py  __main__.py  cli.py  client.py  config.py  downloader.py  file_manager.py
tests/: __init__.py
